--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-checkbox/checkbox": "^0.5.8",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-navigation/bottom-tabs": "^7.0.0",
