--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-checkbox/checkbox": "^0.5.8",
     "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/drawer": "^7.0.19",
     "@react-navigation/native": "^7.0.13",
